Se cambio la informacion de la página nosotros. Se agrego una clase para agregar negritas a las preguntas de la página nosotros. Se cambio y se borro una foto

--- a/css/style.css
+++ b/css/style.css
@@ -253,6 +253,9 @@ img {
 .barra .navegacion a:hover{
   color:#802f01;
 }
+.texto-nosotros span{
+  font-weight: bold;
+}
 @media (min-width:480px){
   .nosotros-cont{
     display: flex;
