--- a/css/style.css
+++ b/css/style.css
@@ -76,12 +76,21 @@ img {
   font-weight: 700;
   text-transform: uppercase;
   font-size: 1.7rem;
+  transition: background-color .3s ease-in-out;
 }
+
 .btn-secundario {
   background-color: #960f0f;
 }
+.btn-secundario:hover {
+  background-color: #fd0606;
+  color: #ffffff;
+}
 .btn-primario {
   background-color: #dd5a0e;
+}
+.btn-primario:hover{
+  background-color: #993800;
 }
 @media (min-width: 768px) {
   .btn {
@@ -100,14 +109,14 @@ img {
   background-image: url(../img/tamales-index.jpg);
   background-position: center center;
   background-size: cover;
-  height: 500px;
+  height: 400px;
 }
 .site-header h1 {
-  color: #c24700;
+  color: #9d3a00;
   text-align: center;
 }
 .site-header a {
-  color: #000000;
+  color: #ffffff;
   text-decoration: none;
 }
 /*Navegacion*/
@@ -135,6 +144,9 @@ img {
   margin-top: 5rem;
   font-size: 2.5rem;
   text-align: center;
+}
+.texto-header p{
+  color: #9d3a00;
 }
 @media (min-width: 480) {
   .texto-header {
@@ -240,6 +252,14 @@ img {
 }
 
 /**PAGINAS INTERNAS**/
+
+.site-externas{
+  background-color: #dd5a0e;
+}
+.site-externas a {
+  color: #ffffff;
+  text-decoration: none;
+}
 
 /**Nosotros**/
 .site-header-nosotros {
